deployments/base/ingress/cert-manager/metrics/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-metrics
  namespace: ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  ingress:
  # Metrics
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": observability
        app.kubernetes.io/name: vmsingle
    toPorts:
    - ports:
      - port: "9402"
        protocol: TCP
